# actionRecog

./: .gitignore  .~lock.linux下安装matlab.docx#  DEBUG  DEBUG~  README.md  README.md~  extractFrames.py  linux下安装matlab.docx
ALSTM-HMDB51/: extrat_features_from_tfrecords.py  get_features_by_CNN.py  my_reload_model.py  my_train.py  video_to_tfrecords.py
from zero/: 1_anaconda.docx  2_tensorflow.docx  3_pycharm.docx  4_caffe.docx  install_script  install_script~
iTDD/: DenseTrackStab  ExtractSpatialCNNFeature_hmdb51.m  ExtractSpatialCNNFeature_ucf101.m  ExtractSpatialCNNFeature_ucf11.m  FeatureMapNormalization.m  SpatialCNNFeature.m  TDD.m  a.mat  extraTra_hmdb51.m  extraTra_ucf101.m  extraTra_ucf11.m  extract_fv.m  extract_fv_i.m  extract_fv_ucf101.m  extract_tdd_hmdb51.m  extract_tdd_ucf101.m  extract_tdd_ucf11.m  rename_script.m  script_extraTra.m  send_mail.m  split_hmdb51_script.m  split_ucf101_script.m  train_svm_hmdb51.m  train_svm_ucf101.m
improved_trajectory/: CMakeLists.txt
improved_trajectory-master/: CMakeLists.txt~
improved_trajectory-master/Untitled Folder/: DenseTrackStab.cpp  DenseTrackStab.cpp~  DenseTrackStab.h  Video.cpp
improved_trajectory-master/Untitled Folder/release/: DenseTrackStab  Video
improved_trajectory-master/include/: DenseTrackStab.h
improved_trajectory-master/src/: DenseTrackStab.cpp
improved_trajectory_v2/: DenseTrackStab.cpp  DenseTrackStab.cpp~  DenseTrackStab.h~  Makefile  Makefile~  Video.cpp~
tool/: extractCNNspatialFeature.py
